Content/Scripts/parser.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/
(function(root) {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { program: peg$parseprogram };
  var peg$startRuleFunction = peg$parseprogram;

  var peg$c0 = ";";
  var peg$c1 = "FFT()";
  var peg$c2 = "Loop";
  var peg$c3 = "(";
  var peg$c4 = ")";
  var peg$c5 = "{";
  var peg$c6 = "}";
  var peg$c7 = "O";
  var peg$c8 = "*";
  var peg$c9 = "=>";
  var peg$c10 = "__";
  var peg$c11 = "->";
  var peg$c12 = "$z";
  var peg$c13 = "$y";
  var peg$c14 = "$x";
  var peg$c15 = "::";
  var peg$c16 = "xx";
  var peg$c17 = "<<";
  var peg$c18 = ">>";
  var peg$c19 = "^^";
  var peg$c20 = "vv";
  var peg$c21 = "$";
  var peg$c22 = "[...]";
  var peg$c23 = "FFT:";
  var peg$c24 = ":";
  var peg$c25 = "#";
  var peg$c26 = "@x";
  var peg$c27 = "@y";
  var peg$c28 = "@z";
  var peg$c29 = "@@x";
  var peg$c30 = "@@y";
  var peg$c31 = "@@z";
  var peg$c32 = "^";
  var peg$c33 = "[";
  var peg$c34 = ",";
  var peg$c35 = "]";
  var peg$c36 = "++";
  var peg$c37 = "vec3";
  var peg$c38 = "~";
  var peg$c39 = "-";
  var peg$c40 = ".";

  var peg$r0 = /^[&.]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[a-zA-Z@]/;
  var peg$r3 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(";", false);
  var peg$e1 = peg$literalExpectation("FFT()", false);
  var peg$e2 = peg$classExpectation(["&", "."], false, false);
  var peg$e3 = peg$literalExpectation("Loop", false);
  var peg$e4 = peg$literalExpectation("(", false);
  var peg$e5 = peg$literalExpectation(")", false);
  var peg$e6 = peg$literalExpectation("{", false);
  var peg$e7 = peg$literalExpectation("}", false);
  var peg$e8 = peg$literalExpectation("O", false);
  var peg$e9 = peg$literalExpectation("*", false);
  var peg$e10 = peg$literalExpectation("=>", false);
  var peg$e11 = peg$literalExpectation("__", false);
  var peg$e12 = peg$literalExpectation("->", false);
  var peg$e13 = peg$literalExpectation("$z", false);
  var peg$e14 = peg$literalExpectation("$y", false);
  var peg$e15 = peg$literalExpectation("$x", false);
  var peg$e16 = peg$literalExpectation("::", false);
  var peg$e17 = peg$literalExpectation("xx", false);
  var peg$e18 = peg$literalExpectation("<<", false);
  var peg$e19 = peg$literalExpectation(">>", false);
  var peg$e20 = peg$literalExpectation("^^", false);
  var peg$e21 = peg$literalExpectation("vv", false);
  var peg$e22 = peg$literalExpectation("$", false);
  var peg$e23 = peg$literalExpectation("[...]", false);
  var peg$e24 = peg$literalExpectation("FFT:", false);
  var peg$e25 = peg$literalExpectation(":", false);
  var peg$e26 = peg$literalExpectation("#", false);
  var peg$e27 = peg$literalExpectation("@x", false);
  var peg$e28 = peg$literalExpectation("@y", false);
  var peg$e29 = peg$literalExpectation("@z", false);
  var peg$e30 = peg$literalExpectation("@@x", false);
  var peg$e31 = peg$literalExpectation("@@y", false);
  var peg$e32 = peg$literalExpectation("@@z", false);
  var peg$e33 = peg$literalExpectation("^", false);
  var peg$e34 = peg$literalExpectation("[", false);
  var peg$e35 = peg$literalExpectation(",", false);
  var peg$e36 = peg$literalExpectation("]", false);
  var peg$e37 = peg$literalExpectation("++", false);
  var peg$e38 = peg$literalExpectation("vec3", false);
  var peg$e39 = peg$literalExpectation("~", false);
  var peg$e40 = peg$literalExpectation("-", false);
  var peg$e41 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e42 = peg$literalExpectation(".", false);
  var peg$e43 = peg$classExpectation([["a", "z"], ["A", "Z"], "@"], false, false);
  var peg$e44 = peg$otherExpectation("whitespace");
  var peg$e45 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(commands) {
     //remove useless comma
     let result = [];
     // this flat() is neccessary
     let row = commands.flat().map(cm=>(typeof cm === "function"?cm():cm));
     result.push(row);
     return result.join("");
};
  var peg$f1 = function(element) { return (typeof element === "function"?element():element); };
  var peg$f2 = function() {
   let result = [];
   result.push("Activate");
   result.push("FFT");
   return result;
};
  var peg$f3 = function(a) { let elements = a.map (element => element[1]);
     let result = [];
      elements.forEach((el, index)=>{
      result.push(el);
      result.push("//");
     })
     return result;
    };
  var peg$f4 = function(LoopType) {
   //return (typeof LoopType === "function"?LoopType():LoopType);
   return LoopType;
};
  var peg$f5 = function(count, commands) {
   return ()=> {
                let result = [];
                for(let i = 0; i<count; i++){
                 commands.forEach(cm=>{
                 let row = (typeof cm === "function"? cm():cm);
                 result.push(row,"//");
                 })
                 //let row = commands.map(cm=>(typeof cm === "function"? cm():cm));
                 //result.push(row,"//");
                }
                return result.join("");
   }
};
  var peg$f6 = function(rotate, angle, rotateTime, objectNumber, gapLength) { if(angle>360.0) { angle = angle%360.0}
     let selected = ["construct", rotate, angle, rotateTime, objectNumber]; 
     if(gapLength) { selected.push(gapLength);}
     return selected; };
  var peg$f7 = function(radius, objectNumber) { return ()=> {let result = ["create", "circle"];
      let r = (typeof radius === "function"?radius():radius);
      let num = (typeof objectNumber === "function"?objectNumber():objectNumber);
      result.push(r,num);
      return result;}
     };
  var peg$f8 = function(op, parameter) { return [op, "position",parameter]; };
  var peg$f9 = function(op, parameter) {return ["offset",op, parameter];};
  var peg$f10 = function(op, parameter) { 
    return ()=> { 
         let result = ["rotate",op];
         let v = (typeof parameter === "function"?parameter():parameter);
         result.push(v);
      return result;      
            }
};
  var peg$f11 = function(op, parameter) {
      return ()=> {
        let result = [];
        result.push(op);
        result.push("create");
        let v = (typeof parameter === "function"?parameter():parameter);
        result.push(v);
      return result;
      }
};
  var peg$f12 = function(parameter) { return ["set", parameter]};
  var peg$f13 = function(op, parameter) { return ["set", op, parameter] };
  var peg$f14 = function(op, parameter) { return ["set", "mesh", parameter] };
  var peg$f15 = function(op, parameter) { return ["set","gaplength", parameter];};
  var peg$f16 = function(item) { return "move"; };
  var peg$f17 = function() { return "Z";};
  var peg$f18 = function() { return "Y";};
  var peg$f19 = function() { return "X";};
  var peg$f20 = function() { return "forward"; };
  var peg$f21 = function() { return "backward" ;};
  var peg$f22 = function() { return "leftward";};
  var peg$f23 = function() { return "rightward"; };
  var peg$f24 = function() { return "upward"; };
  var peg$f25 = function() { return "downward"; };
  var peg$f26 = function(ids, commandGroup) {
     let commands = commandGroup.map(arr=>arr[1]);
     let result = [];
     commands.forEach((command, index) =>{
        result.push(ids, command, "//");
     })
     return result;
   };
  var peg$f27 = function(ids, commandGroup) {
     let commands = commandGroup.map(arr=>arr[1]);
     let result = [];
     ids.forEach((item, index) => {
         commands.forEach(command => {
            result.push("Object", command, item, "//");
         })
     })
     
     return result;
   };
  var peg$f28 = function(ids, op2, parameter) {
     let result = [];
     result.push("LastGroup", op2);
     if(parameter) { result.push(parameter);}
     return result;
   };
  var peg$f29 = function(ids, op2, parameter) {
       let result = [];
       ids.forEach( (item, index) => {
          result.push("Object", op2, item);
          if(parameter) { result.push(parameter);}
          result.push("//");
       })
       return result;
    };
  var peg$f30 = function(op, parameter) {
    let result = [];
    result.push(op);
    if(parameter) { result.push(parameter);}
    return result;
};
  var peg$f31 = function() { return "offset";};
  var peg$f32 = function() { return "LastGroup";};
  var peg$f33 = function(instrumentName) {
   let selected = ["instrument", instrumentName];
   return selected;
};
  var peg$f34 = function(matName) {  let selected = ["material" , matName];
    return selected; };
  var peg$f35 = function() { return ["color"]};
  var peg$f36 = function(op) { let result = ["direction"];
     if(op == "@z") { result.push("Z"); }
     else if(op == "@x") { result.push("X"); }
     else if(op == "@y") { result.push("Y"); }
     return result;
     };
  var peg$f37 = function(op) {let result = ["rotateRate"];
     if(op == "@@z") { result.push("Z"); }
     else if(op == "@@x") { result.push("X"); }
     else if(op == "@@y") { result.push("Y"); }
     return result;
  };
  var peg$f38 = function() { return "scale"; };
  var peg$f39 = function(name) { return text();};
  var peg$f40 = function(item) { console.log(item);
         return item.map ( arr => arr[1]);};
  var peg$f41 = function(item, rule) { let result = [];
         let filter = item.map(arr => arr[1]);
         filter.forEach(element=>{
            if(element.length<2) { result.push(element[0]);}
            else{
               let minValue = parseInt(element[0]);
               let increment = 1;
               if(rule) { increment = parseInt(rule[2]);}
               for(let maxValue = parseInt(element[1]); minValue <= maxValue; minValue+= increment){
                  console.log(minValue);
                  result.push(minValue);
               }
            }
         })
          return result;
       };
  var peg$f42 = function(x, y, z) { return [x, y, z]; };
  var peg$f43 = function(number01, number02) {
       let value01 = parseFloat(number01);
       let value02 = parseFloat(number02);
       if(value01 > value02) { return  ()=> Math.random()*(value02-value01+1)+value01; }
       else  { return ()=> Math.random()*(value02-value01+1)+value01;}
    };
  var peg$f44 = function(min, max) {
             return () => Math.floor(Math.random() *( max - min + 1)) + min;
     };
  var peg$f45 = function(integer01, integer02) { let value01 = parseInt(integer01); 
          let value02 = parseInt(integer02);
          if(value01>value02){ return [value02, value01];}
          else if(value01<value02) { return [value01, value02]}
          else { return [value01];}
          };
  var peg$f46 = function() { return text(); };
  var peg$f47 = function() { return text(); };
  var peg$f48 = function() { return text();};
  var peg$f49 = function() { return parseInt(text());};
  var peg$f50 = function() { return text();};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsecommand();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsecommand();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecommand() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseAudioCommand();
    if (s2 === peg$FAILED) {
      s2 = peg$parseLoop();
      if (s2 === peg$FAILED) {
        s2 = peg$parsechain();
        if (s2 === peg$FAILED) {
          s2 = peg$parsefunction();
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 59) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAudioCommand() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsechain() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parsefunction();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = input.charAt(peg$currPos);
      if (peg$r0.test(s6)) {
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s3 = [s3, s4, s5, s6];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parse_();
        s4 = peg$parsefunction();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = input.charAt(peg$currPos);
          if (peg$r0.test(s6)) {
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s6 === peg$FAILED) {
            s6 = null;
          }
          s3 = [s3, s4, s5, s6];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsefunction() {
    var s0;

    s0 = peg$parseManagerCommand();
    if (s0 === peg$FAILED) {
      s0 = peg$parseObjectCommand();
    }

    return s0;
  }

  function peg$parseLoopElement() {
    var s0, s1, s2, s3, s4;
